objects/Account_POI__c/Account_POI__c.object-meta.xml
<CustomObject>
    <description>The POIs associated with an Account record</description>
    <label>Account POI</label>
    <nameField>
        <displayFormat>APOI-{0000}</displayFormat>
        <label>Account POI #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account POIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>