objects/Account_POI__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the associated Account has access to NBN capability through the selected POI</description>
    <label>Access</label>
    <type>Checkbox</type>
</CustomField>