objects/Account_POI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account associated with POI</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POI Information</relationshipLabel>
    <relationshipName>Account_POIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>