objects/Account_POI__c/fields/Duplicate_POI__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_POI__c</fullName>
    <description>Field to concatenate Account Id, POI Id together to check for duplicates</description>
    <label>Duplicate POI</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>