objects/Account_POI__c/fields/POI__c.field-meta.xml
<CustomField>
    <fullName>POI__c</fullName>
    <description>Related POI associated to the Account</description>
    <label>POI</label>
    <referenceTo>POI__c</referenceTo>
    <relationshipLabel>Account POIs</relationshipLabel>
    <relationshipName>Account_POIs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>