objects/Account_POI__c/fields/Specific_Area_of_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Specific_Area_of_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Account is targeting this POI area as a specific area of marketing.</description>
    <label>Specific Area of Marketing</label>
    <type>Checkbox</type>
</CustomField>